change to help cursors on disc protrusion headers

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<label style="font-variant:small-caps; font-size:medium"><input id="entirelevel" type="checkbox" />link</label>
 							</td>
 							<td class="mark dark trash hover" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
-							<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br />narrowing</a></td>
+							<td class="mark dark trash" title="Right neuroforaminal narrowing"><a style="cursor: auto">Right NF<br />narrowing</a></td>
 							<td class="mark dark trash hover" title="Right foraminal disc protrusion"><a>Right<br />foraminal</a></td>
 							<td class="mark dark trash hover" title="Right subarticular disc protrusion"><a>Right<br />subarticular</a></td>
 							<td class="mark dark trash hover" title="Right central disc protrusion"><a>Right<br />central</a></td>
@@ -127,9 +127,9 @@
 							<td class="mark dark trash hover" title="Left central disc protrusion"><a>Left<br />central</a></td>
 							<td class="mark dark trash hover" title="Left subarticular disc protrusion"><a>Left<br />subarticular</a></td>
 							<td class="mark dark trash hover" title="Left foraminal disc protrusion"><a>Left<br />foraminal</a></td>
-							<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br />narrowing</a></td>
-							<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br />stenosis</a></td>
-							<td class="mark dark trash" title="Other findings"><a>Other<br />findings</a></td>
+							<td class="mark dark trash" title="Left neuroforaminal narrowing"><a style="cursor: auto">Left NF<br />narrowing</a></td>
+							<td class="mark dark trash" title="Spinal canal stenosis"><a style="cursor: auto">Spinal<br />stenosis</a></td>
+							<td class="mark dark trash" title="Other findings"><a style="cursor: auto">Other<br />findings</a></td>
 						</tr>
 
 						<tr>
