--- a/index.html
+++ b/index.html
@@ -152,36 +152,43 @@
 										<h3 style="margin:5px; text-align:center">L1 - L2</h3>
 										Annular fissure
 										<div id="ddAf1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddAf1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddDd1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddEp1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhR1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhL1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddLft1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL1" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddL1_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
@@ -209,36 +216,43 @@
 										<h3 style="margin:5px; text-align:center">L2 - L3</h3>
 										Annular fissure
 										<div id="ddAf2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddAf2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddDd2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddEp2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhR2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhL2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddLft2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL2" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddL2_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
@@ -266,36 +280,43 @@
 										<h3 style="margin:5px; text-align:center">L3 - L4</h3>
 										Annular fissure
 										<div id="ddAf3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddAf3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddDd3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddEp3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhR3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhL3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddLft3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL3" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddL3_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
@@ -323,36 +344,43 @@
 										<h3 style="margin:5px; text-align:center">L4 - L5</h3>
 										Annular fissure
 										<div id="ddAf4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddAf4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddDd4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddEp4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhR4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhL4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddLft4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL4" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddL4_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
@@ -380,36 +408,43 @@
 										<h3 style="margin:5px; text-align:center">L5 - S1</h3>
 										Annular fissure
 										<div id="ddAf5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddAf5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddDd5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddEp5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhR5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddFjhL5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddLft5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL5" class="dragdealer">
+											<span>←</span><span>→</span>
 											<div id="ddL5_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
