add 'Congenitally short pedicles' to 'Other findings'. close #42

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
 										<div id="ddL1" class="dragdealer">
 											<span>←</span><span>→</span>
 											<div id="ddL1_handle" class="handle red-bar">None</div>
-										</div>
+										</div><br>
+										<hr>
+										<input type="checkbox" id="cbCsp1" /><label for="cbCsp1">Congenitally short pedicles</label>
 									</div>
 								</div>
 							</td>
@@ -254,7 +256,9 @@
 										<div id="ddL2" class="dragdealer">
 											<span>←</span><span>→</span>
 											<div id="ddL2_handle" class="handle red-bar">None</div>
-										</div>
+										</div><br>
+										<hr>
+										<input type="checkbox" id="cbCsp2" /><label for="cbCsp2">Congenitally short pedicles</label>
 									</div>
 								</div>
 							</td>
@@ -318,7 +322,9 @@
 										<div id="ddL3" class="dragdealer">
 											<span>←</span><span>→</span>
 											<div id="ddL3_handle" class="handle red-bar">None</div>
-										</div>
+										</div><br>
+										<hr>
+										<input type="checkbox" id="cbCsp3" /><label for="cbCsp3">Congenitally short pedicles</label>
 									</div>
 								</div>
 							</td>
@@ -382,7 +388,9 @@
 										<div id="ddL4" class="dragdealer">
 											<span>←</span><span>→</span>
 											<div id="ddL4_handle" class="handle red-bar">None</div>
-										</div>
+										</div><br>
+										<hr>
+										<input type="checkbox" id="cbCsp4" /><label for="cbCsp4">Congenitally short pedicles</label>
 									</div>
 								</div>
 							</td>
@@ -446,7 +454,9 @@
 										<div id="ddL5" class="dragdealer">
 											<span>←</span><span>→</span>
 											<div id="ddL5_handle" class="handle red-bar">None</div>
-										</div>
+										</div><br>
+										<hr>
+										<input type="checkbox" id="cbCsp5" /><label for="cbCsp5">Congenitally short pedicles</label>
 									</div>
 								</div>
 							</td>
