save text that is added to the end of the report closes #43

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 	<!-- PREVIEW PANE -->
 	<div id="preview">
 		<!-- REPORT AREA -->
-		<div class="editable" id="reportTextarea" contenteditable="true">
+		<div class="editable" id="textareaReport" contenteditable="true">
 			An error has occurred.
 		</div>
 
@@ -501,8 +501,6 @@
 						</button>
 					</td>
 					<td>
-						<label><input type="checkbox" id="conclusion" />Generate <b>CONCLUSION:</b> sentence</label>
-							<br />
 						<label><input type="checkbox" id="talk-brackets" />Add [brackets] for editing in TalkStation</label>
 					</td>
 				</tr>
