--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
 	<!-- FOOTER -->
 	<div class="footer">
-		Patrick Do | 2014
+		<a href="mailto:patrickdo@gmail.com?Subject=Lumbar%20Spine%20Report%20Generator">Patrick Do</a> | 2014
 	</div>
 	<!-- /FOOTER -->
 
